@@ -1,3 +1,8 @@
+ags (0.9.18)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags-oscillator-list restore failed due to typo
+
 ags (0.9.17)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
